--- a/src/Components/AnchorButton/AnchorButton.css
+++ b/src/Components/AnchorButton/AnchorButton.css
@@ -1,4 +1,4 @@
-.anchor-button {
+a.anchor-button {
     text-decoration: none;
     padding: 11px 44px 10px 40px;
     background: #0635C9;
@@ -6,4 +6,11 @@
     font-weight: 600;
     font-size: 1em;
     color: #FFFFFF;
+    border: 2px solid #0635C9;
+}
+
+
+a.anchor-button:hover {
+    background-color: #FFFFFF;
+    color: #0635C9;
 }
