--- a/src/Containers/Footer/Footer.css
+++ b/src/Containers/Footer/Footer.css
@@ -34,6 +34,12 @@
     max-width: 100px;
     margin-top: 5vh;
     display: inline-block;
+    border: 2px solid #FFFFFF;
+}
+
+.footer-container > .content .left .anchor-button:hover {
+    background-color: #0635C9;
+    color: #FFFFFF;
 }
 
 .footer-container > .divider {
