--- a/src/Containers/Summary/Summary.css
+++ b/src/Containers/Summary/Summary.css
@@ -1,7 +1,7 @@
 .summary-container {
     height: auto;
     width: 100%;
-    padding: min(380px, 20%) 0 min(380px, 20%) 0;
+    padding: min(180px, 20%) 0 min(180px, 20%) 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,4 +13,5 @@
     width: 70%;
     max-width: 900px;
     min-width: 327px;
+    margin-top: 0;
 }
